--- a/report/text/LightTabel.tex
+++ b/report/text/LightTabel.tex
@@ -4,6 +4,7 @@
 	\centering
 		\begin{tabular}{| l | l |}
 			\hline 
+			\hline 
 			\textbf{Description} & \textbf{Light Action}\\
 			\hline
 			Looking for connection to router & All lights blink \\
