--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -69,25 +69,25 @@ Shown in the table below is one of the test cases that was made for testing the 
  All test cases can be found in appendix \vref{appen:testSuite}.
 \begin{table}[h]
 	\centering
-		\begin{tabular*}{\textwidth}{|l|l|}
+		\begin{tabular}{|l|p{9cm}|}
 		\hline
 		\hline
 		Name: & WS001\\
 		\hline
-		Description: & \parbox{0.70\textwidth}{Setup a complete system with a managing user, a regular user, a ``TV Controller'' and the accompanying rights to use it.}\\
+		Description: & Setup a complete system with a managing user, a regular user, a ``TV Controller'' and the accompanying rights to use it.\\
 		\hline
-		Requirements: & \parbox{0.70\textwidth}{
+		Requirements: & 
 		\begin{itemize}
 			\item A computer with Internet access.
 			\item The MOM website.
 			\item Two Tags prepared with a Tag ID.
 			\item An Arduino to function as the TV controller. 
-		\end{itemize}}
+		\end{itemize}
 		\\
 		\hline
-		Expected Results: & \parbox{.70\textwidth}{Adding of a regular user,tags, a `TV Controller' and the accompanying rights to use it.}\\
+		Expected Results: & Adding of a regular user,tags, a `TV Controller' and the accompanying rights to use it.\\
 		\hline
-		Steps: & \parbox{.70\textwidth}{
+		Steps: & 
 		\begin{enumerate}
 			\item Log into the MOM website with lniel10 and test.
 			\item Attach the first Tag to the lniel10 profile.
@@ -97,10 +97,10 @@ Shown in the table below is one of the test cases that was made for testing the 
 			\item Add controller TV into the system.
 			\item Add the permissions to log into the TV controller.
 			\item Perform Test AT001A on both profiles with addendum: Wait 3 minutes for both users and note if either expends points.
-		\end{enumerate}}
+		\end{enumerate}
 		\\		
 		\hline
-		\end{tabular*}
+		\end{tabular}
 \end{table}
 
 
