--- a/report/layout/preface.tex
+++ b/report/layout/preface.tex
@@ -7,6 +7,8 @@ This report serves as a suggestion of how to moderate children's increasing use 
 \\
 Included with this report, there is a CD containing the project's Git repository. Which contains the report, source code of the system as well as the graphic assets used in the project.\\
 \\
+The prototype of the website can be found at http://www.spcadmin.tk. Login with user: asger password: asger.\\
+\\
 The group would like to personally thank:\\
 Hua Lu our counselor.
 %Ulrik Nyman for great input and support during the project.\\
