cosmetic changes + master

--- a/report/text/conclusion.tex
+++ b/report/text/conclusion.tex
@@ -16,7 +16,7 @@ To address this problem, we face the following technical challenges:
 
 As a whole the project gives a suggestion that is ready, with some minor updates, to be tested in a real life scenario. But the product of this project is not ready to be fully implemented in daily use or commercialized yet.\\
 Before this can happen, the controller must be constructed into a state that corresponds to the specifications discussed in chapter \vref{chap:controller} and the bugs/errors found during testing must be fixed.\\
-\\
+\newpage
 However we can conclude on the technical challenges:
 
 \section*{How do we identify unique users in a subtle and child friendly way}
