--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -24,7 +24,7 @@ Another possible improvement of the controller would be a wireless connection be
 
 \textbf{Error handling}\\
 The error handling for when connection between the controller and server is lost has not been fully implemented. A proper solution is however discussed in chapter \vref{chap:controller}.\\
-Currently the user will be logged off if the internet connection is lost. But a better solution would be to handle the loss of connection and somehow correctly bill the user, for spent time when the connection re-enters.
+Currently the user will be logged off if the internet connection is lost. But a better solution would be to handle the loss of connection and somehow correctly bill the user, for spent time when the connection re-enters.\\
 
 \textbf{Calendar}\\
 Implement the calendar functionality fully. Where all the time bound rules are presented and the user should be able to make a rule in the calendar. It should be possible to show a calendar for one, some or all users. Other possible functionality could be import and export this calendar.\\
@@ -34,6 +34,6 @@ Another improvement of MOM could be to make a mobile application.\\
 
 \textbf{The Daemon}\\
 The daemon should detect when a controller has not contacted the service in a while and do some disciplinary actions against the user. There could also be more real time rules added which would need to be implemented in the daemon. Also other real time things such as daily/weekly reports sent via email or SMS could be implemented to give parents automatic statistics about their childs media usage. 
-
+\newpage
 \textbf{Media Integration}\\
 For future implementation it would be nice if normal parental control could be implemented into the MOM system, such that media could be controlled with normal media parental control through the MOM webinterface.
