--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -41,7 +41,7 @@ In order to maintain the wast amount of information collected from the users and
 Such server work can be done from a private home or centralized global server, maintained by the manufacturer of the system.\\
 
 Listed here is the pros and cons of having a decentralized server setup versus centralized server setup.\\
-
+\newpage
 \textbf{Decentralized Server Setup}\\
 Pros:
 \begin{itemize}
