--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -27,7 +27,7 @@ if (Ethernet.begin(mac) == 0)
 //that the DHCP lease is renewed when needed.
 Ethernet.maintain();
 \end{lstlisting}
-
+\newpage
 Whether the user tries to log in or out from the device, the Arduino will have to access the web server via the API.
 The process is almost identical in either case and can be divided into two parts:
 \begin{itemize}
