--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -1,4 +1,4 @@
-\chapter{Design of the Controller}
+\chapter{Controller}
 \label{chap:controller}
 This chapter is focused on the controller system of the Media-Online Management system. The controller system is the hand and mouth of the MOM system. Handling the everyday use of the MOM system as activating and restricting usage of media devices.\newline
 %This chapter is focused on the controller of the Media-Online Management system. The controller consist of a tag reader and power control device which is discussed in this chapter but when mentioning controller both is implied. \newline
